# pyfactx

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/pyfactx/: AllowanceChargeReasonCode.py  BinaryObject.py  CreditorFinancialAccount.py  CreditorFinancialInstitution.py  DebtorFinancialAccount.py  DocumentLineDocument.py  DocumentTypeCode.py  ExchangedDocument.py  ExchangedDocumentContext.py  FacturXBasic.py  FacturXBasicWL.py  FacturXData.py  FacturXEN16931.py  FacturXGenerator.py  FacturXMinimum.py  HeaderTradeAgreement.py  HeaderTradeDelivery.py  HeaderTradeSettlement.py  Indicator.py  InvoiceProfile.py  InvoiceTypeCode.py  LegalOrganization.py  LineTradeAgreement.py  LineTradeDelivery.py  LineTradeSettlement.py  Note.py  PaymentMeansCode.py  ProcuringProject.py  ProductCharacteristic.py  ProductClassification.py  ReferencedDocument.py  SpecifiedPeriod.py  SupplyChainEvent.py  SupplyChainTradeLineItem.py  SupplyChainTradeTransaction.py  TaxCategoryCode.py  TaxTypeCode.py  TimeReferenceCode.py  TradeAccountingAccount.py  TradeAddress.py  (+17 more)
src/pyfactx/resources/0_minimum/_XSLT_MINIMUM/: Factur-X_1.07.2_MINIMUM.xslt
src/pyfactx/resources/1_basicwl/_XSLT_BASICWL/: Factur-X_1.07.2_BASICWL.xslt
src/pyfactx/resources/2_basic/_XSLT_BASIC/: Factur-X_1.07.2_BASIC.xslt
src/pyfactx/resources/3_en16931/_XSLT_EN16931/: Factur-X_1.07.2_EN16931.xslt
