[build-system]
requires = ["setuptools>=80.7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfactx"
version = "0.3.0"
description = "Python package using Pydantic models to generate FacturX-compliant documents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = [
    "LICENSE",
]
authors = [{ name = "Vincent Artur", email = "6145191+vartur@users.noreply.github.com" }]
dependencies = [
    "pydantic>=2.11.4,<3.0",
    "lxml>=5.3.2,<6.0",
    "saxonche>=12.7.0,<13.0"
]
keywords = ["factur-x", "invoicing", "EN16931", "e-invoicing", "xml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]


[project.urls]
Repository = "https://github.com/vartur/pyfactx"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
pyfactx = ["resources/0_minimum/*", "resources/0_minimum/_XSLT_MINIMUM/*",
    "resources/1_basicwl/*", "resources/1_basicwl/_XSLT_BASICWL/*",
    "resources/2_basic/*", "resources/2_basic/_XSLT_BASIC/*",
    "resources/3_en16931/*", "resources/3_en16931/_XSLT_EN16931/*"]